# kshook

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json
src/: kshook.cpp  kshook.def  kshook.rc  launcher.cpp  launcher.rc
src/avs2/: avs2.cpp  avs2.hpp
src/common/sdvx/: defines.hpp  score_export.cpp  score_export.hpp  score_save.cpp  score_save.hpp
src/core/: buildinfo.hpp.in  exception.hpp  game.hpp  http.cpp  http.hpp  log.cpp  log.hpp  service.cpp  service.hpp  version.cpp  version.hpp
src/game/: gamelist.hpp.in
src/game/sv6c/: game.cpp  game.hpp
src/game/sv6c/hooks/: property_destroy.cpp  property_destroy.hpp
src/game/sv6c/requests/: score_export.cpp  score_export.hpp  score_save.cpp  score_save.hpp
